# Buddy_Bot

./: README.md
buddybot/: SPI.h  buddybot.atsln  spi.h  spi_init.c
buddybot/arduino/: budddymain.c  buddybot.componentinfo.xml  buddybot.cproj  buddybot.h  main.c
buddybot/arduino/Debug/: Makefile  buddybot.elf  buddybot.hex  buddybot.lss  buddybot.map  buddybot.srec  main.d
buddybot/buddybot/: budddymain.c  buddybot.h  main.c
buddybot/raspberry_pi/: python_mods.c  setup.py  spi.h  spi_init.c  test_spi.c
buddybot/raspberry_pi/pro_controller/: remote_control.c
buddybot/raspberry_pi/sensors/: pysensor.py
buddybot/raspberry_pi/sensors/lidar/: lidar-test.py
buddybot/raspberry_pi/sensors/mpu6050/: mpu-test.py
buddybot/raspberry_pi/sensors/temp_sensor/: Cargo.toml
buddybot/raspberry_pi/sensors/temp_sensor/src/: main.rs
buddybot/raspberry_pi/spi_movement/c_implementation/: spi_init.c
buddybot/ros/: scripts
buddybot/ros2_workspace/install/: local_setup.sh  setup.bash  setup.sh
buddybot/ros2_workspace/log/: latest_build
buddybot/ros2_workspace/src/install/: local_setup.sh  setup.sh  setup.zsh
buddybot/ros2_workspace/src/log/: latest_build
buddybot/ros2_workspace/src/move_bot/: CMakeLists.txt
buddybot/ros2_workspace/src/move_pkg/: setup.py
buddybot/ros2_workspace/src/movement/: CMakeLists.txt  package.xml
buddybot/ros2_workspace/src/mpu/: CMakeLists.txt  package.xml  setup.py
buddybot/ros2_workspace/src/my_cpp_package/: CMakeLists.txt  package.xml
buddybot/ros2_workspace/src/tfmini_s/: setup.cfg  setup.py
(+92 files in other folders)
